--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,18 @@ wirefish
 # Cache
 .cache/
 build/
+
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+CMakeUserPresets.json
+**/.qt
+**/*autogen/
