Add libsniff to app

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,9 @@ project(wirefish VERSION 1.0.0 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 add_subdirectory(lib)
 add_subdirectory(cli)
-target_include_directories(cli PRIVATE lib)
-target_link_libraries(cli PUBLIC sniff)
+add_subdirectory(app)
+target_link_libraries(cli PRIVATE sniff)
+target_link_libraries(app PRIVATE sniff)
