--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -6,4 +6,5 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 FILE(GLOB CXX_SOURCES *.cpp)
 FILE(GLOB CXX_HEADERS *.h)
-add_library(sniff ${CXX_SOURCES} ${CXX_HEADERS})
+add_library(sniff STATIC ${CXX_SOURCES})
+target_include_directories(sniff INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
