--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,5 +8,5 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 add_subdirectory(lib)
 add_subdirectory(cli)
 add_subdirectory(app)
-target_link_libraries(cli PRIVATE sniff)
-target_link_libraries(app PRIVATE sniff)
+target_link_libraries(cli PRIVATE lib)
+target_link_libraries(app PRIVATE lib)
