--- a/cli/CMakeLists.txt
+++ b/cli/CMakeLists.txt
@@ -6,5 +6,5 @@ project(cli VERSION 1.0.0 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 FILE(GLOB CXX_SOURCES *.cpp)
-FILE(GLOB CXX_HEADERS *.h)
-add_executable(cli ${CXX_SOURCES} ${CXX_HEADERS})
+target_include_directories(lib INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
+add_executable(cli ${CXX_SOURCES})
