--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,10 +1,9 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(sniff VERSION 1.0.0 LANGUAGES CXX)
+project(lib VERSION 1.0.0 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 FILE(GLOB CXX_SOURCES *.cpp)
-FILE(GLOB CXX_HEADERS *.h)
-add_library(sniff STATIC ${CXX_SOURCES})
-target_include_directories(sniff INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
+add_library(lib STATIC ${CXX_SOURCES})
+target_include_directories(lib INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
